# rustyransom

./: .gitignore  2  AGENTS.md  Cargo.toml  README.md  data  public_key.asc
.hive/: issues.jsonl
dropper/: go.mod  go.sum  info.go  linux_dropper.go  main.go  server.go  tui.go
dropper/static/: 404.html  index.html  style.css
src/: encryption.rs  main.rs  persistence.rs  recovery.rs
