[package]
name = "rustyransom"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["stream"] }
dirs2 = "3.0.1"
rayon = "1.10.0"
zeroize = "1.8.2"
flate2 = "1.1.8"
base64 = "0.22.1"
sequoia-openpgp = { version = "2.1.0", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
